tests/snapshots/run_wpt_conformance__trtx_logicalXor_uint8_5D_inputs_with_alternating_broadcast_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "logical_xor.https.any.js",
    "logicalXor uint8 5D inputs with alternating broadcast axes",
    "trtx",
    Failed {
        msg: Some(
            "logical_xor :: logicalXor uint8 5D inputs with alternating broadcast axes: index 1: actual=0 expected=1 tolerance=0\n  inputs: inputA: [1, 0, 1, 0, 1, 0, 1, 0]; inputB: [1, 1, 0, 0]\n  expected output: [0, 1, 0, 1, 0, 1, 0, 1, 1, 0 ...] (len=32)\n  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=32)\n  expected output full nd:\n[0, 1, 0, 1, 0, 1, 0, 1, 1, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])\n  actual output full nd:\n[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: u8[2, 1, 2, 1, 2];\n    inputB: u8[1, 2, 1, 2, 1];\n  }\n\n  nodes {\n    [output] = logicalXor(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
