tests/snapshots/run_wpt_conformance__trtx_logicalXor_uint8_broadcast_4D_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "logical_xor.https.any.js",
    "logicalXor uint8 broadcast 4D to 5D",
    "trtx",
    Failed {
        msg: Some(
            "logical_xor :: logicalXor uint8 broadcast 4D to 5D: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputA: [255, 0, 1, 8]; inputB: [0, 1, 2, 8, 0, 255]\n  expected output: [1, 0, 0, 0, 1, 1, 0, 1, 0, 0 ...] (len=12)\n  actual output: [0, 0, 128, 63, 0, 0, 0, 0, 0, 0 ...] (len=12)\n  expected output full nd:\n[1, 0, 0, 0, 1, 1, 0, 1, 0, 0, ...] (len=12, shape=[1, 2, 2, 1, 3])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 0, 0, 0, 0, ...] (len=12, shape=[1, 2, 2, 1, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: u8[1, 2, 2, 1, 1];\n    inputB: u8[2, 1, 1, 3];\n  }\n\n  nodes {\n    [output] = logicalXor(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
