tests/snapshots/run_wpt_conformance__trtx_lstmCell_float16_tensors_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lstm_cell.https.any.js",
    "lstmCell float16 tensors with all options",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: Unsupported operation: lstmCell\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    lstmCellCellState: f16[2, 2];\n    lstmCellHiddenState: f16[2, 2];\n    lstmCellInput: f16[2, 2];\n  }\n\n  consts {\n    operand_0: f16[8, 2] @bytes([0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192]);\n    operand_3: f16[8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);\n    operand_5: f16[8, 2] @bytes([102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46]);\n    operand_6: f16[8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);\n    operand_7: f16[6] @bytes([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);\n  }\n\n  nodes {\n    [lstmCellOutput1, lstmCellOutput2] = lstmCell(lstmCellInput, operand_0, operand_5, lstmCellHiddenState, lstmCellCellState, activations=[\"relu\", \"relu\", \"relu\"], bias=3, label=\"\", layout=\"iofg\", peepholeWeight=7, recurrentBias=6);\n  }\n\n  outputs { lstmCellOutput1; lstmCellOutput2; }\n}\n",
        ),
    },
)
