tests/snapshots/run_wpt_conformance__trtx_lstmCell_float32_tensors_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lstm_cell.https.any.js lstmCell float32 tensors with all options, trtx
 Failed to build graph: graph conversion failed for trtx: Unsupported operation: lstmCell

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    lstmCellCellState: f32[2, 2];
    lstmCellHiddenState: f32[2, 2];
    lstmCellInput: f32[2, 2];
  }

  consts {
    operand_0: f32[8] @bytes([0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64]);
    operand_4: f32[6] @bytes([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);
    operand_5: f32[8] @bytes([0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64]);
    operand_6: f32[8, 2] @bytes([205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61]);
    operand_7: f32[8, 2] @bytes([0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 0, 192]);
  }

  nodes {
    [lstmCellOutput1, lstmCellOutput2] = lstmCell(lstmCellInput, operand_7, operand_6, lstmCellHiddenState, lstmCellCellState, activations=["relu", "relu", "relu"], bias=0, label="", layout="iofg", peepholeWeight=4, recurrentBias=5);
  }

  outputs { lstmCellOutput1; lstmCellOutput2; }
}
